infrastructure/traefik/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: crowdsec
  namespace: server
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: middleware
    app.kubernetes.io/part-of: server
spec:
  plugin:
    crowdsec-bouncer:
      enabled: true
      defaultDecisionSeconds: 60
      crowdsecMode: live
      crowdsecAppsecEnabled: true
      crowdsecAppsecHost: crowdsec:7422
      crowdsecAppsecFailureBlock: true
      crowdsecLapiKeyFile: /etc/traefik/secrets/CROWDSEC_API_KEY
      crowdsecLapiHost: crowdsec:8080
      crowdsecLapiScheme: http
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: status-redirect
  namespace: server
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: middleware
    app.kubernetes.io/part-of: server
spec:
  redirectRegex:
    regex: ".*"
    replacement: "https://status.d-f.dev/status/"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: shorty
  namespace: server
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: middleware
    app.kubernetes.io/part-of: server
spec:
  plugin:
    shorty:
      links:
        wordle: "https://github.com/davidferneding/wordle"
        wasser: "https://www.icloud.com/iclouddrive/06d0sTp578AdyRfiKQUW_0MHg#San-Training_Wasserrettung"
