infrastructure/traefik/ingressroute-shorty.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: shorty
  namespace: server
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: server
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`d-f.dev`)"
      kind: Rule
      services:
        - kind: TraefikService
          name: noop@internal
      middlewares:
        - name: crowdsec
          namespace: server
        - name: shorty
          namespace: server
  tls:
    certResolver: letsencrypt
